Update: Ajout de la stack technique au footer et centrage des liens

--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
       aria-label="Pied de page"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="grid md:grid-cols-2 gap-8 mb-8">
+        <div class="grid md:grid-cols-3 gap-8 mb-8">
           <div>
             <h3 class="text-2xl font-bold mb-4">AT</h3>
             <p class="text-gray-400">
@@ -1212,7 +1212,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="text-center">
             <h4 class="text-lg font-semibold mb-4">Liens Rapides</h4>
             <ul class="space-y-2">
               <li>
@@ -1244,6 +1244,18 @@
                 >
               </li>
             </ul>
+          </div>
+
+          <div>
+            <h4 class="text-lg font-semibold mb-4">Stack Technique</h4>
+            <div class="flex flex-wrap gap-2">
+              <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-lg text-sm border border-blue-500/30">React</span>
+              <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 rounded-lg text-sm border border-cyan-500/30">TypeScript</span>
+              <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-lg text-sm border border-green-500/30">Node.js</span>
+              <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-lg text-sm border border-purple-500/30">Tailwind CSS</span>
+              <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-lg text-sm border border-yellow-500/30">JavaScript</span>
+              <span class="px-3 py-1 bg-pink-500/20 text-pink-300 rounded-lg text-sm border border-pink-500/30">SQL</span>
+            </div>
           </div>
         </div>
 
