Fix CSP pour Google Analytics
- Ajout region1.google-analytics.com et wildcard *.google-analytics.com
- Résolution erreurs connect-src CSP

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Politique de sécurité du contenu -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' https: data:; connect-src 'self' https://formspree.io https://www.google-analytics.com; form-action 'self' https://formspree.io;"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' https: data:; connect-src 'self' https://formspree.io https://www.google-analytics.com https://region1.google-analytics.com https://*.google-analytics.com; form-action 'self' https://formspree.io;"
     />
 
     <!-- Open Graph / Facebook -->
