Ajout page Mentions légales
- Création mentions-legales.html complète (RGPD, cookies, hébergeur)
- Ajout lien dans footer du portfolio
- Conformité légale française et RGPD
- Détails Google Analytics et Formspree

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="fr" class="scroll-smooth">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CUXWNCS693"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CUXWNCS693"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-CUXWNCS693');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-CUXWNCS693");
     </script>
 
     <meta charset="UTF-8" />
@@ -1290,8 +1295,13 @@
         </div>
 
         <div class="border-t border-gray-800 pt-8 text-center">
-          <p class="text-gray-400">
+          <p class="text-gray-400 mb-2">
             &copy; 2025 Aurélien Thébault. Tous droits réservés.
+          </p>
+          <p class="text-sm text-gray-500">
+            <a href="mentions-legales.html" class="hover:text-blue-400 transition-colors">
+              Mentions légales
+            </a>
           </p>
         </div>
       </div>
