--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -35,7 +35,7 @@
         <div class="flex justify-between items-center h-16">
           <a
             href="index.html"
-            class="text-2xl font-bold bg-gradient-to-r from-blue-400 to-cyan-400 bg-clip-text text-transparent"
+            class="text-2xl font-bold bg-gradient-to-r from-gray-400 to-gray-500 bg-clip-text text-transparent"
           >
             AT
           </a>
@@ -53,7 +53,7 @@
     <main class="pt-24 pb-16 px-4 sm:px-6 lg:px-8">
       <div class="max-w-4xl mx-auto">
         <h1
-          class="text-4xl font-bold mb-8 bg-gradient-to-r from-blue-400 to-cyan-400 bg-clip-text text-transparent"
+          class="text-4xl font-bold mb-8 bg-gradient-to-r from-gray-400 to-gray-500 bg-clip-text text-transparent"
         >
           Mentions Légales
         </h1>
@@ -78,7 +78,7 @@
               <a
                 href="#"
                 id="email-legal"
-                class="text-blue-400 hover:text-blue-300"
+                class="text-gray-400 hover:text-gray-300"
               ></a>
             </p>
             <p class="mb-2">
@@ -107,7 +107,7 @@
                 href="https://github.com"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="text-blue-400 hover:text-blue-300"
+                class="text-gray-400 hover:text-gray-300"
                 >https://github.com</a
               >
             </p>
@@ -228,7 +228,7 @@
               <a
                 href="#"
                 id="email-rgpd"
-                class="text-blue-400 hover:text-blue-300"
+                class="text-gray-400 hover:text-gray-300"
               ></a>
             </p>
           </section>
@@ -300,7 +300,7 @@
     >
       <p>&copy; 2025 Aurélien Thébault. Tous droits réservés.</p>
       <p class="mt-2">
-        <a href="index.html" class="text-blue-400 hover:text-blue-300"
+        <a href="index.html" class="text-gray-400 hover:text-gray-300"
           >Retour au portfolio</a
         >
       </p>
