--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <meta
       property="og:url"
-      content="https://aurel1407.github.io/new_portfolio/"
+      content="https://aurel1407.github.io/portfolio/"
     />
 
     <!-- Twitter -->
@@ -73,7 +73,7 @@
         "@type": "Person",
         "name": "Aurélien Thébault",
         "jobTitle": "Développeur Web Full-Stack",
-        "url": "https://aurel1407.github.io/new_portfolio/",
+        "url": "https://aurel1407.github.io/portfolio/",
         "sameAs": [
           "https://github.com/Aurel1407",
           "https://www.linkedin.com/in/aurélien-thébault-244b84336"
@@ -888,7 +888,7 @@
                 >
                   <div class="flex flex-col gap-3 w-full max-w-xs">
                     <a
-                      href="https://github.com/Aurel1407/new_portfolio"
+                      href="https://github.com/Aurel1407/portfolio"
                       target="_blank"
                       rel="noopener noreferrer"
                       class="block bg-white/10 backdrop-blur-sm border-2 border-white text-white px-6 py-3 rounded-xl font-semibold hover:bg-white/20 transition-colors focus:outline-none focus:ring-2 focus:ring-white text-center"
