--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                   d'administration, gestion des produits, commandes et
                   utilisateurs.
                 </p>
-                <div class="flex flex-wrap gap-2">
+                <div class="flex flex-wrap gap-2 mb-4">
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
                     >React</span
@@ -798,6 +798,12 @@
                     >SQL</span
                   >
                 </div>
+                <a
+                  href="projects/zetoupanda.html"
+                  class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500"
+                >
+                  <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir les détails
+                </a>
               </div>
             </article>
 
@@ -848,7 +854,7 @@
                   réservation de gîtes en Bretagne avec système de recherche
                   avancé et gestion complète des réservations.
                 </p>
-                <div class="flex flex-wrap gap-2">
+                <div class="flex flex-wrap gap-2 mb-4">
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
                     >React</span
@@ -866,6 +872,12 @@
                     >Express</span
                   >
                 </div>
+                <a
+                  href="projects/shuno.html"
+                  class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500"
+                >
+                  <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir les détails
+                </a>
               </div>
             </article>
 
@@ -909,7 +921,7 @@
                   animations fluides, accessibilité WCAG 2.1 AA et optimisations
                   de performance.
                 </p>
-                <div class="flex flex-wrap gap-2">
+                <div class="flex flex-wrap gap-2 mb-4">
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
                     >HTML5</span
@@ -927,6 +939,12 @@
                     >Accessibility</span
                   >
                 </div>
+                <a
+                  href="projects/portfolio.html"
+                  class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500"
+                >
+                  <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir les détails
+                </a>
               </div>
             </article>
           </div>
